--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -29,6 +29,7 @@ body {
 
     .nav-bar ul {
       margin-top: 5px;
+      display: flex;
 
       .nav-item {
         margin-left: 10px;
@@ -271,10 +272,13 @@ body {
       flex-direction: column;
       margin-left: 100px;
 
-      a {
-        text-decoration: none;
-        color: #626262;
+      li {
         margin-bottom: 10px;
+
+        a {
+          color: #626262;
+          text-decoration: none;
+        }
       }
     }
     .company-name {
@@ -292,6 +296,18 @@ body {
     }
 
     .form {
+      p:first-child {
+        font-weight: 700;
+        font-size: 1em;
+        margin-bottom: 15px;
+      }
+
+      input {
+        border: none;
+        height: 1.6em;
+        margin-bottom: 25px;
+      }
+
       a {
         text-decoration: none;
         font-size: 1em;
